--- a/application/index/view/admin/studentedit.html
+++ b/application/index/view/admin/studentedit.html
@@ -44,12 +44,10 @@
                     </select>
                 </div>
             </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-2 control-label">密码:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" name="password"  value="{$Student->getData('password')}" />
-                    </div>
-            </div>
+
+            <input type="hidden" class="form-control" name="password"  value="{$Student->getData('password')}" />
+
+            
             <div class="form-group">
                 <label for="klass_id" class="col-sm-2 control-label">班级:</label>
                 <div class="col-sm-10">
