--- a/application/index/view/teacher/courseweek.html
+++ b/application/index/view/teacher/courseweek.html
@@ -72,7 +72,7 @@
                 <label>{$area->name}:&nbsp;</label>
                 {volist name="$area->Classroom" id="classroom" $key="key"}
                     <label class="radio-inline">
-                      <input type="radio" name="classroom_id" value="{$key + 1}" {eq name="classroom->getdata('id')" value="$classroom_id"} checked="checked"{/eq}> {$classroom->area->name . $classroom->getdata('classroomname')}
+                      <input type="radio" name="classroom_id" value="{$classroom->getdata('id')}" {eq name="classroom->getdata('id')" value="$classroom_id"} checked="checked"{/eq}> {$classroom->area->name . $classroom->getdata('classroomname')}
                     </label>
                 {/volist}
                 <br />
