--- a/application/index/view/admin.html
+++ b/application/index/view/admin.html
@@ -35,7 +35,9 @@
                     <li {eq name="$isaction" value="page"}class="active"{/eq}><a href="/index/admin/page">首页</a></li>
                     <li {eq name="$isaction" value="term"}class="active"{/eq}><a href="/index/admin/term">学期控制</a></li>
                     <li {eq name="$isaction" value="teacher"}class="active"{/eq}><a href="/index/admin/teacher">教师管理</a></li>
+                    <li {eq name="$isaction" value="college"}class="active"{/eq}><a href="/index/admin/college">学院管理</a></li>
                     <li {eq name="$isaction" value="klass"}class="active"{/eq}><a href="/index/admin/klass">班级管理</a></li>
+                    <li {eq name="$isaction" value="area"}class="active"{/eq}><a href="/index/admin/area">教室区域管理</a></li>
                     <!-- 这个标签是当前标签 -->
                     <li {eq name="$isaction" value="classroom"}class="active"{/eq}><a href="/index/admin/classroom">教室管理</a></li>
                 </ul>
