--- a/application/index/view/student/score.html
+++ b/application/index/view/student/score.html
@@ -6,8 +6,8 @@
             
             <!-- <h3>当前时间：{:date('Y-m-d H:i:s')}
             </h3> -->
-            <h3>当前时间：{:date('Y-m-d')}
-            </h3>
+            <!-- <h3>当前时间：{:date('Y-m-d')}
+            </h3> -->
             <table>
                 <tr>
                     <th>
@@ -31,7 +31,7 @@
                     </td>
                 </tr>
             </table>
-            <br><br>
+            <br>
             <table class="table table-bordered">
                 <tr class="info">
                     <th>科目</th>
