--- a/application/index/view/student/info.html
+++ b/application/index/view/student/info.html
@@ -4,8 +4,9 @@
         <div class="col-md-12">
             
 
-            <h3>当前时间：{:date('Y-m-d')}
-            </h3>
+            <!-- <h3>当前时间：{:date('Y-m-d')}
+            </h3> -->
+            <br>
             </table>
             <table class="table table-bordered">
                 <tr class="info">
