--- a/application/index/view/student/index.html
+++ b/application/index/view/student/index.html
@@ -77,17 +77,17 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="{:url('Student/courseList')}" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-list-alt"></i>&nbsp;<span class="network-name">今日课表</span></a>
+                                <a href="{:url('Student/course')}" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-list-alt"></i>&nbsp;<span class="network-name">课表查询</span></a>
                             </li>
                             <li>
-                                <a href="{:url('Student/getQR')}"
-                                 class="btn btn-default btn-lg"><i class="glyphicon glyphicon-check"></i>&nbsp;<span class="network-name">课堂签到</span></a>
-                            </li>
-                            <li>
-                                <a href="{:url('Student/getScore')}" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-search"></i>&nbsp;<span class="network-name">成绩查询</span></a>
+                                <a href="{:url('Student/score')}" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-search"></i>&nbsp;<span class="network-name">成绩查询</span></a>
                             </li>
                             <li>
                                 <a href="{:url('Student/putMessage')}" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-envelope"></i>&nbsp;<span class="network-name">在线留言</span></a>
+                            </li>
+                            <li>
+                                <a href="{:url('Student/info')}"
+                                 class="btn btn-default btn-lg"><i class="glyphicon glyphicon-check"></i>&nbsp;<span class="network-name">个人信息</span></a>
                             </li>
                             </ul>
                     </div>
