--- a/application/index/view/teacher/coursesee.html
+++ b/application/index/view/teacher/coursesee.html
@@ -178,47 +178,47 @@
             <tr>
                 <td>第4小节</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=1&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=1&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[21][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[21][0]} <br> 
                     长度：{$table[21][1]}<br>
                     教室：{$classroom->get($table[21][2])->area->name . $classroom->get($table[21][2])->classroomname}
                     {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=2&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=2&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[22][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[22][0]}<br>
                     长度：{$table[22][1]}<br>
                     教室：{$classroom->get($table[22][2])->area->name . $classroom->get($table[22][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=3&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=3&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[23][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[23][0]}<br>
                     长度：{$table[23][1]}<br>
                     教室：{$classroom->get($table[23][2])->area->name . $classroom->get($table[23][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=4&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=4&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[24][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[24][0]}<br>
                     长度：{$table[24][1]}<br>
                     教室：{$classroom->get($table[24][2])->area->name . $classroom->get($table[24][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=5&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=5&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[25][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[25][0]}<br>
                     长度：{$table[25][1]}<br>教室：{$classroom->get($table[25][2])->area->name . $classroom->get($table[25][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=6&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=6&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[26][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[26][0]}<br>
                     长度：{$table[26][1]}<br>教室：{$classroom->get($table[26][2])->area->name . $classroom->get($table[26][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=7&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=7&begin=4' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[27][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[27][0]}<br>
                     长度：{$table[27][1]}<br>教室：{$classroom->get($table[27][2])->area->name . $classroom->get($table[27][2])->classroomname}
@@ -381,49 +381,49 @@
             <tr>
                 <td>第8小节</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=1&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=1&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[49][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[49][0]} <br> 
                     长度：{$table[49][1]}<br>
                     教室：{$classroom->get($table[49][2])->area->name . $classroom->get($table[49][2])->classroomname}
                     {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=2&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=2&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[50][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[50][0]}<br>
                     长度：{$table[50][1]}<br>
                     教室：{$classroom->get($table[50][2])->area->name . $classroom->get($table[50][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=3&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=3&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[51][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[51][0]}<br>
                     长度：{$table[51][1]}<br>
                     教室：{$classroom->get($table[51][2])->area->name . $classroom->get($table[51][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=4&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=4&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[52][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[52][0]}<br>
                     长度：{$table[52][1]}<br>
                     教室：{$classroom->get($table[52][2])->area->name . $classroom->get($table[52][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=5&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=5&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[53][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[53][0]}<br>
                     长度：{$table[53][1]}<br>
                     教室：{$classroom->get($table[53][2])->area->name . $classroom->get($table[53][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=6&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=6&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[54][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[54][0]}<br>
                     长度：{$table[54][1]}<br>
                     教室：{$classroom->get($table[54][2])->area->name . $classroom->get($table[54][2])->classroomname}
                 {/eq}</td>
                 <td>
-                    <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=7&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a>
+                    <!-- <a class="btn btn-primary" href="{:url('courseweek?id=' . $course->getData('id') . '&weekday=7&begin=8' )}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>选择周次</a> -->
                     {eq name="$table[55][0]" value=""}<br><br><br><br> {else /}
                     <br>周次：{$table[55][0]}<br>
                     长度：{$table[55][1]}<br>
