--- a/application/index/view/teacher/courseweek.html
+++ b/application/index/view/teacher/courseweek.html
@@ -61,9 +61,42 @@
             <div class="col-md-4">
                 <h3>选择时长（小节）:&nbsp;</h3>
                 <select type="text" name="length">
+                
+                <?php  ?>
+                  <?php switch ($begin) { ?>
+                    <?php case '1': ?>
                   <option>2</option>
                   <option>3</option>
                   <option>4</option>
+                        <?php break;
+                    case '5': ?>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                        <?php break;
+                    case '2': ?>
+                  <option>2</option>
+                  <option>3</option>
+                        <?php break;
+                    case '6': ?>
+                  <option>2</option>
+                  <option>3</option>
+                        <?php break;
+                    case '3': ?>
+                  <option>2</option>
+                        <?php break;
+                    case '7': ?>
+                  <option>2</option>
+                        <?php break;
+                    case '9': ?>
+                  <option>2</option>
+                  <option>3</option>
+                        <?php break;
+                    default: ?>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                        <?php break;} ?>
                 </select>
             </div>
             <div class="col-md-4">
