--- a/application/index/view/teacher/setcourse.html
+++ b/application/index/view/teacher/setcourse.html
@@ -38,7 +38,7 @@
     <!-- 问题：直接扫二维码无法解析地址 -->
 
     <a class="btn btn-primary" href="{$url}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>链接跳转</a>
-    <!-- {$url}   -->
+    {$url}  
     <br><br>
     <a class="btn btn-success" href="/index/teacher/onlinehome?id={$courseinfo->id}" role="button" aria-hidden="true"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>返回</a>
 </body>
