--- a/application/index/view/teacher/courseadd.html
+++ b/application/index/view/teacher/courseadd.html
@@ -62,7 +62,13 @@
                     </select>
                 </div>
             </div>
-            
+            <div class="form-group">
+                <label for="number" class="col-sm-2 control-label">总人数:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="number" placeholder="总人数..." name="number" />
+                </div>
+            </div>
+
             {volist name="colleges" id="college" key="key"}
             <label>{$college->name}:&nbsp;</label>
             {volist name="college->Klasses" id="klass"}
