--- a/application/index/view/teacher/online.html
+++ b/application/index/view/teacher/online.html
@@ -20,7 +20,7 @@
                     <td>{$courseinfo->Course->name}</td>
                     <td>{eq name='$courseinfo->Course->type' value='0'} 选修 {else /} 必修 {/eq} </td>
                     
-                    <td>{eq name='courseinfo->Course->type' value='0' } 123{else /} 456 {/eq}</td>
+                    <td>{eq name='courseinfo->Course->type' value='0' } {else /}  {$klass[$key-1]} {/eq}</td>
                     <td><a href="onlinehome?id={$courseinfo->id}" class="btn btn-primary">&nbsp;详情</a></td>
                   </tr>
                 {/volist}
